turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:24: error: type mismatch;
 found   : Int
 required: java.awt.Color
      setCouleurBrosse(couleur)
                       ^